# newscope

./: .gitignore  CODING_GUIDELINES.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SPEC.md  config.default.toml  config.toml  docker-compose.yml  justfile  verification_config.toml
common/: Cargo.toml
common/src/: lib.rs
migrations/: 20250101000000_initial_schema.sql  20251204000000_add_processing_jobs.sql  20251204100000_add_user_preferences.sql  20251204110000_add_user_article_views.sql  20251205000000_add_user_article_summaries.sql  20251209120000_add_reading_speed.sql  20251209130000_add_rating.sql  20251209140000_add_session_title.sql  20251230143000_c_embeddings.sql  20260105000000_normalize_user_data.sql  20260107000000_enable_vector_search.sql  20260107100000_user_vectors.sql  20260107110000_fix_vector_dimensions.sql
mynewslens/: Cargo.toml
mynewslens/src/: ingestion.rs  lib.rs  main.rs  press_review.rs  scraping.rs  server.rs
mynewslens/src/llm/: remote.rs
mynewslens/src/sessions/: mod.rs  websocket.rs
mynewslens/static/css/: style.css
mynewslens/static/js/: api.js
mynewslens/tests/: integration_test.rs  llm_remote_test.rs  sessions_test.rs
newscope/: Cargo.toml  test_db_90105742-d9e2-44ac-9a21-324e04273df0.sqlite  test_db_ade9ccbf-4d50-425e-a005-1bfbc1aff716.sqlite
newscope/src/: ingestion.rs  lib.rs  main.rs  personalization.rs  personalize_worker.rs  press_review.rs  processing.rs  scraping.rs  server.rs  storage.rs
newscope/src/llm/: mod.rs  remote.rs  summarizer.rs
newscope/src/sessions/: mod.rs  websocket.rs
newscope/static/: dashboard.html  index.html  mockup_card.html
newscope/static/css/: style.css
newscope/static/js/: api.js  app.js  chat.js
newscope/tests/: integration_test.rs  llm_remote_test.rs  sessions_test.rs  storage_test.rs  subscription_filter_test.rs
